--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="overlay">
             <div class="container">
               <div class="row aling-items-center">
-                 <div class="col-md-6 offset-md-6 text-center text-md-right">
+                 <div class="col-md-12  text-center text-sm-right">
                     <h1>Semillero marketmix 2022</h1>
                     
                     <a href="#" class="btn btn-outline-light">Quiero ser developer</a>
