--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4 mb-4 ">
+        <div class="col-12 col-sm-6 col-md-4 mt-4">
           <div class="card">
             <img src="assets/images/encargado 1.jpg" class="card-img-top" alt="foto de zacha">
             <div class="card-body">
               <h5 class="card-title">Carlos Martinez</h5>
-              <p class="card-text">310 321 6880</p>
+              <p class="card-text">310 321 4880</p>
             </div>
           </div>
         </div>
-        <div class="col-sm-4 mb-4 ">
+        <div class="col-12 col-sm-6 col-md-4 mt-4">
           <div class="card">
             <img src="assets/images/encargado2.jpg" class="card-img-top" alt="foto de zacha">
             <div class="card-body">
@@ -77,7 +77,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-4 mb-4 ">
+        <div class="col-12 col-sm-6 col-md-4 mt-4">
           <div class="card">
             <img src="assets/images/encargado3.jpg" class="card-img-top" alt="foto de zacha">
             <div class="card-body">
@@ -102,7 +102,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4 mb-4 ">
+        <div class="col-12 col-sm-6 col-md-4 mt-4 ">
           <div class="card">
             <img src="assets/images/aspirante1.jpg" class="card-img-top" alt="foto de zacha">
             <div class="card-body">
@@ -111,7 +111,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-4 mb-4 ">
+        <div class="col-12 col-sm-6 col-md-4 mt-4 ">
           <div class="card">
             <img src="assets/images/aspirante2.jpg" class="card-img-top" alt="foto de zacha">
             <div class="card-body">
@@ -120,7 +120,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-4 mb-4 ">
+        <div class="col-12 col-sm-6 col-md-4 mt-4 ">
           <div class="card">
             <img src="assets/images/aspirante3.jpg" class="card-img-top" alt="foto de zacha">
             <div class="card-body">
@@ -129,7 +129,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-4 mb-4 ">
+        <div class="col-12 col-sm-6 col-md-4 mt-4 ">
           <div class="card">
             <img src="assets/images/aspirante4.jpg" class="card-img-top" alt="foto de zacha">
             <div class="card-body">
@@ -138,7 +138,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-4 mb-4 ">
+        <div class="col-12 col-sm-6 col-md-4 mt-4 ">
           <div class="card">
             <img src="assets/images/aspirante5.jpg" class="card-img-top" alt="foto de zacha">
             <div class="card-body">
@@ -147,7 +147,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-4 mb-4 ">
+        <div class="col-12 col-sm-6 col-md-4 mt-4 ">
           <div class="card">
             <img src="assets/images/aspirante 6.jpg" class="card-img-top" alt="foto de zacha">
             <div class="card-body">
